@@ -33,7 +33,7 @@ resources 'repository' => 'git://github.com/michal-josef-spacek/App-Pod-Example'
 test_requires 'Capture::Tiny' => 0;
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
-test_requires 'Readonly' => 0;
+test_requires 'File::Spec::Functions' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Output' => 1.02;
