@@ -2,15 +2,10 @@ use strict;
 use warnings;
 
 use App::Pod::Example;
-use Capture::Tiny qw(capture);
 use English qw(-no_match_vars);
 use Error::Pure::Utils qw(clean);
-use Readonly;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 3;
 use Test::NoWarnings;
-
-# Constants.
-Readonly::Scalar our $EMPTY_STR => q{};
 
 # Test.
 eval {
@@ -28,39 +23,3 @@ eval {
 is($EVAL_ERROR, "Unknown parameter 'something'.\n",
 	'Bad parameter \'something\'.');
 clean();
-
-# Test.
-@ARGV = (
-	'Foo',
-);
-eval {
-       App::Pod::Example->new;
-};
-is($EVAL_ERROR, "Cannot process any action (-p or -r options).\n",
-	'No action.');
-clean();
-
-# Test.
-SKIP: {
-skip "Problem with exit", 1;
-my $right_ret = <<'END';
-Usage: t/App-Pod-Example/04-new.t [-d flag] [-e] [-h] [-n number] [-p] [-r]
-        [-s section] [--version] pod_file_or_module [argument ..]
-
-        -d flag         Turn debug (0/1) (default is 1).
-        -e              Enumerate lines. Only for print mode.
-        -h              Help.
-        -n number       Number of example (default is nothing).
-        -p              Print example.
-        -r              Run example.
-        -s section      Use section (default EXAMPLE).
-        --version       Print version.
-END
-my $obj;
-my ($stdout, $stderr) = capture {
-	$obj = App::Pod::Example->new;
-};
-isa_ok($obj, 'App::Pod::Example');
-is($stdout, $EMPTY_STR, 'No stdout.');
-like($stderr, $right_ret, 'Print help.');
-}
